# ultra-sync

./: .gitignore  ARCHITECTURE.md  README.md  afinir.md  daemon.md  documentationV2.md  objectif.md
p2p_sync_daemon/: Cargo.toml
p2p_sync_daemon/src/: lib.rs  main.rs
p2p_sync_daemon/src/journal/: service.rs
p2p_sync_daemon/src/lock/: manager.rs
p2p_sync_daemon/src/network/: behaviour.rs  mod.rs  protocol.rs  service.rs
p2p_sync_daemon/src/srcs/sync/: watcher.rs
p2p_sync_daemon/src/sync/: engine.rs  mod.rs  watcher.rs
secure_p2p/: .gitignore  Cargo.toml
secure_p2p/chunk_engine/: Cargo.toml
secure_p2p/chunk_engine/src/: lib.rs
secure_p2p/cli_app/: Cargo.toml  build.rs
secure_p2p/cli_app/src/: main.rs
secure_p2p/conflict_solver/: Cargo.toml
secure_p2p/conflict_solver/src/: lib.rs
secure_p2p/crash_recovery/: Cargo.toml
secure_p2p/crash_recovery/src/: lib.rs
secure_p2p/crypto/: Cargo.toml
secure_p2p/crypto/src/: lib.rs
secure_p2p/crypto_core/: Cargo.toml
secure_p2p/crypto_core/src/: lib.rs
secure_p2p/ledger_core/: Cargo.toml  src.rs
secure_p2p/ledger_core/src/: lib.rs
secure_p2p/p2p_core/: Cargo.toml
secure_p2p/p2p_core/src/: client.rs  lib.rs  roles.rs
secure_p2p/p2p_ui/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
secure_p2p/p2p_ui/src/: App.css  App.tsx  Dashboard.tsx  InfoModal.tsx  PasswordModal.tsx
secure_p2p/p2p_ui/src-tauri/src/: lib.rs  main.rs
secure_p2p/presence_monitor/: Cargo.toml
secure_p2p/presence_monitor/src/: lib.rs
secure_p2p/src/: main.rs
secure_p2p/sync_engine/: Cargo.toml
secure_p2p/sync_engine/src/: lib.rs
