[package]
name = "p2p_sync_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "macros", "request-response", "tcp", "yamux", "noise"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
notify = "6.1.1"
env_logger = "0.11.2"
log = "0.4"
hex = "0.4"
thiserror = "1.0"
futures = "0.3"
rand = "0.8"
base64 = "0.22.0"
async-trait = "0.1"