[package]
name = "cli_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
rpassword = "7.3"
thiserror = "1.0"
log = "0.4"
libp2p = "0.53.2"
chrono = "0.4"
serde_json = "1.0"
hex = "0.4"

# Workspace dependencies
p2p_core = { path = "../p2p_core" }
crypto = { path = "../crypto" }
ledger_core = { path = "../ledger_core" }
