[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
dirs = "5.0.1"
hex = "0.4"
thiserror = "1.0"
libp2p = { version = "0.53.2", features = ["ed25519"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.1.0"

[dev-dependencies]
tempfile = "3"
