[package]
name = "p2p_core"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "tls", "dns", "yamux", "noise", "macros", "tokio", "request-response", "cbor", "identify", "kad", "gossipsub", "mdns"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
futures = "0.3"
hex = "0.4"
crypto = { path = "../crypto" }
ledger_core = { path = "../ledger_core" }
chunk_engine = { path = "../chunk_engine" }
presence_monitor = { path = "../presence_monitor" }
sync_engine = { path = "../sync_engine" }
conflict_solver = { path = "../conflict_solver" }
crash_recovery = { path = "../crash_recovery" }
tauri = { version = "2.0.0-rc", features = ["wry"] }
ed25519-dalek = "2.1"

[dev-dependencies]
tempfile = "3.10"
