[package]
name = "p2p_ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "p2p_ui_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "p2p_ui"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p2p_core = { path = "../p2p_core" }
ledger_core = { path = "../ledger_core" }
crypto_core = { path = "../crypto_core" }
tokio = { version = "1", features = ["full"] }
