[package]
name = "sync_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
notify = "6.1"
tokio = { version = "1.36", features = ["full"] }
chunk_engine = { path = "../chunk_engine" }
# Removed p2p_core dependency to avoid cycle
ledger_core = { path = "../ledger_core" }
log = "0.4"
